# ros2_basics

./: README.md
src/actions_quiz/: CMakeLists.txt  package.xml
src/actions_quiz/launch/: actions_quiz_client.launch.py  actions_quiz_server.launch.py
src/actions_quiz/src/: actions_quiz_client.cpp  actions_quiz_server.cpp  another_quiz.cpp
src/actions_quiz_msg/: CMakeLists.txt  package.xml
src/client_pkg/: CMakeLists.txt  package.xml
src/client_pkg/launch/: service_client_launch_file.launch.py  service_client_v2_launch_file.launch.py  stop_client_launch_file.launch.py
src/client_pkg/src/: service_client.cpp  service_client_v2.cpp  service_server.cpp  stop_client.cpp
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/srv/: MyCustomServiceMessage.srv
src/executors_exercises_pkg/: CMakeLists.txt  package.xml
src/executors_exercises_pkg/src/: box_bot_manager.cpp  executor_example_1.cpp  executor_example_2.cpp  executor_example_3.cpp  executor_example_4.cpp  executor_example_4_single_threaded.cpp  executor_example_5.cpp  executor_example_5_mutually_exclusive.cpp  executor_example_5_mutually_exclusive_multiple.cpp  executor_example_5_reentrant.cpp
src/exercise42_pkg/: CMakeLists.txt  package.xml
src/exercise42_pkg/launch/: exercise42_launch_file.launch.py
src/exercise42_pkg/src/: excersize42_service.cpp
src/movement_pkg/: CMakeLists.txt  package.xml
src/movement_pkg/launch/: movement_server_launch.py
src/movement_pkg/src/: movement_server.cpp
src/my_action_client/: CMakeLists.txt  package.xml
src/my_action_client/launch/: action_client_launch.py
src/my_action_client/src/: action_client.cpp
src/my_action_server/: CMakeLists.txt  package.xml
src/my_action_server/launch/: my_action_server_launch.py
src/my_action_server/src/: my_action_server.cpp
src/my_package/: CMakeLists.txt
src/my_package/launch/: my_package_launch.py
src/my_package/src/: simple.cpp
src/object_avoidance_pkg/: CMakeLists.txt  package.xml
src/object_avoidance_pkg/launch/: object_avoidance_launch.py
src/object_avoidance_pkg/src/: move_robot.cpp
src/right_wall_following_pkg/: CMakeLists.txt  package.xml
src/right_wall_following_pkg/launch/: right_wall_following_launch.py
src/right_wall_following_pkg/src/: right_wall_following.cpp
src/services_quiz/: CMakeLists.txt  package.xml
src/services_quiz/launch/: services_quiz_client.launch.py  services_quiz_server.launch.py
src/services_quiz/src/: services_quiz_client.cpp  services_quiz_server.cpp
src/services_quiz_srv/: CMakeLists.txt  package.xml
src/topic_publisher_pkg/: CMakeLists.txt  package.xml
src/topic_publisher_pkg/launch/: move_robot_launch.py  topic_publisher_pkg_launch.py
src/topic_publisher_pkg/src/: move_robot.cpp  publish_age.cpp  simple_topic_publisher.cpp
src/topic_subscriber_pkg/: CMakeLists.txt  package.xml
src/topic_subscriber_pkg/launch/: simple_topic_subscriber_launch.py
src/topic_subscriber_pkg/src/: simple_topic_subscriber.cpp
src/topics_quiz/: CMakeLists.txt  package.xml
src/topics_quiz/launch/: topics_quiz.launch.py
src/topics_quiz/src/: solution.cpp  topics_quiz.cpp
src/wall_following_pkg/: CMakeLists.txt  README.md  debugging_notes.txt  package.xml
src/wall_following_pkg/launch/: wall_follower_launch.py  wall_following_launch.py
src/wall_following_pkg/resources/: debugging_notes.txt
src/wall_following_pkg/src/: wall_follower.cpp  wall_following.cpp
